# entangled-filament-detection

./: .gitignore  AGENTS.md  README.md  pyproject.toml
Notes/: WORK_PLAN.md
data/synthetic/batch_001/: annotation_0000.json  annotation_0001.json  annotation_0002.json  annotation_0003.json  annotation_0004.json  metadata.json
notebooks/: visualizer_app.py
synthetic/: generator.py
