[project]
name = "entangled-filament-detection"
version = "0.1.0"
description = "Filamentous instance detection with partial annotations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "tensorboard>=2.14.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "h5py>=3.10.0",
    "napari>=0.4.17",
    "pyqtgraph>=0.13.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
